--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 	  
 
 	
-	  <div><i id = "inspire">&nbsp;</div>
+	  <span><i id="inspire">&nbsp;</span>
 	  
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
