--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 	fugiat nulla pariatur.
 </p>
 	  
-
-	
-	  <p><i id="inspire">&nbsp;</p>
+<p id="inspire">&nbsp;</p>
 	  
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
