--- a/would-you-rather.html
+++ b/would-you-rather.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Luv 2 meet U - Would you rather?</title>
+<title>Emergency questions</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="l2mu-style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body onload="newQuote()">
 
@@ -11,13 +11,14 @@
 <div class="container">
   
   <div class="Header">
-  <span id="logo"><a href="index.html"><img src="Luv2meetU-logo-300x286.png" width="175px" ></a></span>
+  <span id="logo"><a href="index.html"><img src="https://via.placeholder.com/150"></a></span>
   </div>
   
   <div class="Nav">
 
 <button class="accordion"><a href="index.html">Home</a></button>
 
+	  <--Hide this menu
 <button class="accordion">Questions</button>
 <div class="panel">
    <ul><li><a href="#">Dating</a></li>
@@ -27,7 +28,7 @@
 <button class="accordion"><a href="tips.html">Top tips</a></button>
 
 <button class="accordion"><a href="useful.html">Useful numbers</a></button>
-
+Unhide the menu-->
 
   </div>
   <script>
