--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <button class="accordion"><a href="index.html">Home</a></button>
 
-	  <--Hide this menu
+	  <!--Hide this menu
 <button class="accordion">Questions</button>
 <div class="panel">
    <ul><li><a href="#">Dating</a></li>
@@ -28,7 +28,7 @@
 <button class="accordion"><a href="tips.html">Top tips</a></button>
 
 <button class="accordion"><a href="useful.html">Useful numbers</a></button>
-Unhide the menu-->
+Unhide the menu--!>
 
   </div>
   <script>
