--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ for (i = 0; i < acc.length; i++) {
 </script>
   
   <div class="Main">
-  <h1>Would you rather</h1>
+  <h1>Emergency questions</h1>
 <p><i id = "quotes">What?</i> 
 	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 	  
