--- a/index.html
+++ b/index.html
@@ -50,13 +50,10 @@ for (i = 0; i < acc.length; i++) {
   
   <div class="Main">
   <h1>Emergency questions</h1>
-<p><i id = "quotes">What?</i> 
+<p><i id = "quotes"></i> 
 	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 	  
-	  <p>
-These types of questions are great for critical thinking skills because it makes you analyize two very engaging or not so engaging situations. 
-They also promote practicing their listening and speaking skills while creating situations that they have to think on their feet.
-</p>
+
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
 </div>
