--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@ for (i = 0; i < acc.length; i++) {
 	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 	  
 
+<p>
+<form action=”mailto:visitor.one.audits@gmail.com”
+method=”POST” enctype=”multipart/form-data” name=”EmailForm”>
+Submit a new emergency question:<br> <textarea name=”NewEmergencyQuestion” rows=”6″ cols=”20″>
+</textarea><br><br> <input type=”submit” value=”Submit”> 
+</form>
+</p>
+
   </div>
   <div class="Footer"><p>&copy;7HD 2021</p></div>
 </div>
