--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@ for (i = 0; i < acc.length; i++) {
 	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 	  
 
-<p>
-<form action=”mailto:visitor.one.audits@gmail.com”
-method=”POST” enctype=”multipart/form-data” name=”EmailForm”>
-Submit a new emergency question:<br> <textarea name=”NewEmergencyQuestion” rows=”6″ cols=”20″>
-</textarea><br><br> <input type=”submit” value=”Submit”> 
+<p><form action="mailto:visitor.one.audits@gmail.com" method="post" enctype="text/plain">
+
+Submit a new emergency question:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
 </form>
+
 </p>
 
   </div>
