--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ for (i = 0; i < acc.length; i++) {
 	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 	  
 
-<p><form action="mailto:visitor.one.audits@gmail.com" method="post" enctype="text/plain">
-
-Submit a new emergency question:<br>
-<input type="text" name="comment" size="50"><br><br>
+<p>
+<form action="http://formspree.io/visitor.one.audits@gmail.com">
+<input type="email" name="_replyto">
+Submit an emergency question:<br />
+<textarea   name="body"></textarea>
 <input type="submit" value="Send">
-<input type="reset" value="Reset">
 </form>
 
 </p>
