--- a/total.html
+++ b/total.html
@@ -12,32 +12,32 @@
 <tr>
 <td>1</td>
 <td><input id="r1ta" name="r1ta" type="number" /></td>
-<td><input id="r1tb" name="r1tb" type="number" /></td>
-<td><input id="r1e" name="r1e" type="number" /></td>
+<td><input id="r1tb" name="r1tb" type="number" />0</td>
+<td><input id="r1e" name="r1e" type="number" />0</td>
 </tr>
 <tr>
 <td>2</td>
-<td><input id="r2ta" name="r2ta" type="number" /></td>
-<td><input id="r2tb" name="r2tb" type="number" /></td>
-<td><input id="r2e" name="r2e" type="number" /></td>
+<td><input id="r2ta" name="r2ta" type="number" />0</td>
+<td><input id="r2tb" name="r2tb" type="number" />0</td>
+<td><input id="r2e" name="r2e" type="number" />0</td>
 </tr>
 <tr>
 <td>3</td>
 <td><input id="r3ta" name="r3ta" type="number" /></td>
-<td><input id="r3tb" name="r3tb" type="number" /></td>
-<td><input id="r3e" name="r3e" type="number" /></td>
+<td><input id="r3tb" name="r3tb" type="number" />0</td>
+<td><input id="r3e" name="r3e" type="number" />0</td>
 </tr>
 <tr>
 <td>4</td>
 <td><input id="r4ta" name="r4ta" type="number" /></td>
-<td><input id="r4tb" name="r4tb" type="number" /></td>
-<td><input id="r4e" name="r4e" type="number" /></td>
+<td><input id="r4tb" name="r4tb" type="number" />0</td>
+<td><input id="r4e" name="r4e" type="number" />0</td>
 </tr>
 <tr>
 <td>TOTAL</td>
 <td><output for="r1ta r2ta r3ta r4ta" name="tta"></output></td>
-<td><output for="r1tb r2tb r3tb r4tb" name="ttb"></output></td>
-<td><output for="r1e r2e r3e r4e" name="te"></output></td>
+<td><output for="r1tb r2tb r3tb r4tb" name="ttb"></output>0</td>
+<td><output for="r1e r2e r3e r4e" name="te"></output>0</td>
 </tr>
 </tbody>
 </table>
