--- a/selector.html
+++ b/selector.html
@@ -5,8 +5,8 @@
 <p>Select a category of emergency questions from the list.</p>
 
 <select id="mySelect" onchange="myFunction()">
-  <option value="Audi">General questions</option>
-  <option value="BMW">Christmas questions</option>
+  <option value="General">General questions</option>
+  <option value="Christmas">Christmas questions</option>
 </select>
 
 <p>When you select a category, a filtered selection of emergency questions is available via a random selection button.</p>
