--- a/new.html
+++ b/new.html
@@ -3,13 +3,18 @@
 <head>
 <title>Emergency questions</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<style>
+.content {
+  max-width: 500px;
+  margin: auto;
+}
+</style>
 </head>
 <body onload="newQuote()">
 
 
   
-  <div class="Main">
+  <div class="content">
 
 <p><i id = "quotes"></i> 
 	<button class="button button1" onclick="newQuote()">I need an emergency question</button> </p>
