--- a/new.html
+++ b/new.html
@@ -8,64 +8,23 @@
   max-width: 500px;
   margin: auto;
 }
-	.table_component {
-    overflow: auto;
-    width: 100%;
-}
-
-.table_component table {
-    border: 1px solid #dededf;
-    height: 100%;
-    width: 100%;
-    table-layout: auto;
-    border-collapse: collapse;
-    border-spacing: 1px;
-    text-align: left;
-}
-
-.table_component caption {
-    caption-side: top;
-    text-align: left;
-}
-
-.table_component th {
-    border: 1px solid #dededf;
-    background-color: #eceff1;
-    color: #000000;
-    padding: 5px;
-}
-
-.table_component td {
-    border: 1px solid #dededf;
-    padding: 5px;
-}
-
-.table_component tr:nth-child(even) td {
-    background-color: #ffffff;
-    color: #000000;
-}
-
-.table_component tr:nth-child(odd) td {
-    background-color: #ffffff;
-    color: #000000;
-}
+	
 </style>
 </head>
 <body onload="newQuote()">
 
 
   
- 
-<div class="table_component" role="region" tabindex="0">
-<table>
-    <caption>Table 1</caption>
-    <thead>
+
+<table border="1px">
+
+
         <tr>
-            <th><p><i id = "quotes"></i> 
-	<button class="button button1" onclick="newQuote()">I need an emergency question</button> </p></th>
+            <td><p><i id = "quotes"></i> 
+	<button class="button button1" onclick="newQuote()">I need an emergency question</button> </p></td>
         </tr>
-    </thead>
-    <tbody>
+   
+
         <tr>
             <td><p>
   &nbsp;
