--- a/new.html
+++ b/new.html
@@ -55,7 +55,7 @@
 
 
 <div class="table_component" role="region" tabindex="0">
-<table>
+<table border="1">
     
     <thead>
         <tr>
@@ -72,7 +72,15 @@
 
 
 
+ <h1>Emergency questions</h1>
+<p><i id = "quotes"></i> 
+	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 	  
+
+<p>
+
+
+</p>	  
 
 
 
