--- a/new.html
+++ b/new.html
@@ -8,7 +8,24 @@
   max-width: 500px;
   margin: auto,150px;
 }
+/*Button*/
+.button {
+  background-color: #aaaaaa; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 16px;
+  margin: 0px;
+}
 
+.button1 {border-radius: 6px; display: block;}
+	
+/*Button END*/
+
+#quotes {margin: 0px; padding-bottom: 20px; display: block;}
 </style>
 <link rel="stylesheet" href="style.css">
 </head>
