--- a/new.html
+++ b/new.html
@@ -7,7 +7,8 @@
 .content {
   max-width: 500px;
   margin: auto;
-	background-color: #123456; 
+	background-color: #eeeeee; 
+	border: 1px;
 }
 /*Button*/
 .button {
