--- a/new.html
+++ b/new.html
@@ -10,6 +10,14 @@
 	background-color: #eeeeee; 
 	border: 1px;
 }
+
+.Footer { grid-area: Footer;   background-color: #542785;
+  padding: 10px;
+  text-align: right;
+  height: 100px;
+  color: #fff;
+}
+	
 /*Button*/
 .button {
   background-color: #aaaaaa; 
