--- a/new.html
+++ b/new.html
@@ -11,14 +11,14 @@
 	border: 1px;
 }
 
-.Footer { grid-area: Footer;   background-color: #542785;
+.footer { grid-area: Footer;   background-color: #542785;
   padding: 10px;
   text-align: right;
   height: 100px;
   color: #fff;
 }
 	
-/*Button*/
+
 .button {
   background-color: #aaaaaa; 
   border: none;
@@ -33,7 +33,7 @@
 
 .button1 {border-radius: 6px; display: block;}
 	
-/*Button END*/
+
 
 
 </style>
