--- a/new.html
+++ b/new.html
@@ -11,6 +11,10 @@
 	border: 1px;
 }
 
+h1 {
+font-face: arial; 
+font-size: 30px;
+}
 .footer { grid-area: Footer;   background-color: #542785;
   padding: 10px;
   text-align: right;
