--- a/new.html
+++ b/new.html
@@ -12,9 +12,10 @@
 }
 
 h1 {
-font: arial; 
-font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 6px;	
 }
+	
 .footer { grid-area: Footer;   background-color: #542785;
   padding: 10px;
   text-align: right;
