--- a/new.html
+++ b/new.html
@@ -13,7 +13,8 @@
 
 h1 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 6px;	
+  font-size: 26px;	
+  padding: 100px 0px 30px 0px
 }
 	
 .footer { grid-area: Footer;   background-color: #542785;
