--- a/new.html
+++ b/new.html
@@ -17,11 +17,13 @@ h1 {
   padding: 100px 0px 30px 0px
 }
 	
-.footer { grid-area: Footer;   background-color: #542785;
+.footer { grid-area: Footer;   background-color: #aaaaaa;
   padding: 10px;
   text-align: right;
   height: 100px;
   color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 	
 
