--- a/new.html
+++ b/new.html
@@ -17,8 +17,8 @@ h1 {
   padding: 100px 0px 30px 0px
 }
 	
-.footer { grid-area: Footer;   background-color: #aaaaaa;
-  padding: 10px;
+.footer {background-color: #aaaaaa;
+  margin: auto;
   text-align: right;
   height: 100px;
   color: #fff;
