--- a/new.html
+++ b/new.html
@@ -7,8 +7,10 @@
 .content {
   max-width: 500px;
   margin: auto;
-	background-color: #eeeeee; 
-	border: 1px;
+background-color: #eeeeee; 
+border: 1px;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 12px;
 }
 
 h1 {
