--- a/new.html
+++ b/new.html
@@ -8,9 +8,12 @@
   max-width: 500px;
   margin: auto;
 background-color: #eeeeee; 
-border: 1px;
+}
+
+	.content p{
 font-family: Arial, Helvetica, sans-serif;
-font-size: 12px;
+font-size: 16px;
+		margin: 20px;
 }
 
 h1 {
