--- a/new.html
+++ b/new.html
@@ -41,7 +41,7 @@ h1 {
   text-decoration: none;
   display: block;
   font-size: 16px;
-  margin: 0px;
+  margin: 30px 0px 0px 0px;
 }
 
 .button1 {border-radius: 6px; display: block;}
