--- a/new.html
+++ b/new.html
@@ -19,7 +19,8 @@ font-size: 16px;
 h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 26px;	
-  padding: 100px 0px 30px 0px
+  padding: 100px 0px 30px 0px;
+	margin: 20px;
 }
 	
 .footer {background-color: #aaaaaa;
