--- a/new.html
+++ b/new.html
@@ -24,7 +24,7 @@ h1 {
 }
 	
 .footer {background-color: #aaaaaa;
-  margin: auto;
+  margin: 20px;
   text-align: right;
   height: 100px;
   color: #fff;
