--- a/new.html
+++ b/new.html
@@ -24,13 +24,16 @@ h1 {
 }
 	
 .footer {background-color: #aaaaaa;
-  margin: 20px;
-  text-align: right;
+  margin: auto;
   height: 100px;
   color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
 }
+
+.footer p 
+	{text-align: right;
+	font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+	  }
 	
 
 .button {
