--- a/new.html
+++ b/new.html
@@ -7,7 +7,7 @@
 .content {
   max-width: 500px;
   margin: auto;
-background-color: #eeeeee; 
+background-color: #ffffff; 
 }
 
 	.content p{
@@ -31,6 +31,7 @@ h1 {
 
 .footer p 
 	{text-align: right;
+	 margin: 20px;
 	font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
 	  }
