--- a/new.html
+++ b/new.html
@@ -6,8 +6,8 @@
 <style>
 .content {
   max-width: 500px;
-  margin: auto;
-background-color: #ffffff; 
+  margin: 200px auto;
+background-color: #aaaaaa; 
 }
 
 	.content p{
