--- a/new.html
+++ b/new.html
@@ -7,7 +7,7 @@
 .content {
   max-width: 500px;
   margin: 200px auto;
-background-color: #ffffff; 
+background-color:Tomato;
 }
 
 	.content p{
@@ -16,12 +16,7 @@ font-size: 16px;
 		margin: 20px;
 }
 
-.header 
-	{background-color: #aaaaaa;
-  margin: auto;
-  height: 100px;
-  color: #fff;
-}
+
 h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 26px;	
@@ -65,10 +60,8 @@ h1 {
 </head>
 <body onload="newQuote()">
 
-<div class="header">
  <h1>Emergency questions</h1>
 
-</div>
 	
 <div class="content">
 
