--- a/new.html
+++ b/new.html
@@ -28,7 +28,8 @@ h1 {
   margin: auto;
   height: 100px;
   color: #fff;
-  border-bottom: 1px, #000;
+  border: 1px;
+	 border-color: #000;
 }
 
 .footer p 
