--- a/new.html
+++ b/new.html
@@ -9,8 +9,7 @@
   margin: 200px auto;
 background-color:Tomato;
 	height: 500px;
-		 	   border: 10px;
-	 border-color: #000;
+border-style: solid;
 }
 
 	.content p{
