--- a/new.html
+++ b/new.html
@@ -10,6 +10,7 @@
 background-color:Tomato;
 	height: 500px;
 border-style: solid;
+	border-radius: 5px;
 }
 
 	.content p{
@@ -28,7 +29,7 @@ h1 {
 	
 .footer {background-color: #aaaaaa;
   height: 100px;
-margin-top: 400px;
+margin-top: 200px;
 }
 
 .footer p 
