--- a/new.html
+++ b/new.html
@@ -10,7 +10,7 @@
 background-color:Tomato;
 	height: 500px;
 border-style: solid;
-	border-radius: 5px;
+	border-radius: 10px;
 }
 
 	.content p{
@@ -63,7 +63,7 @@ font-family: Arial, Helvetica, sans-serif;
 <div class="content">
  <h1>Emergency questions</h1>
 
-<p><i id = "quotes"></i> 
+<p><i id = "quotes"></i> <p>&nbsp;</p></p>
 	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 	  
 
