--- a/new.html
+++ b/new.html
@@ -37,7 +37,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 .button {
   background-color: #aaaaaa; 
-  border: none;
+  border-style: solid;
   color: white;
   padding: 35px 32px;
   text-align: center;
@@ -63,7 +63,7 @@ font-family: Arial, Helvetica, sans-serif;
 <div class="content">
  <h1>Emergency questions</h1>
 
-<p><i id = "quotes"></i> <p>&nbsp;</p></p>
+<p><i id = "quotes"></i> </p><br/>
 	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 	  
 
