--- a/new.html
+++ b/new.html
@@ -29,9 +29,10 @@ h1 {
 	
 h3 {
 font-family: Arial, Helvetica, sans-serif;
-  font-size: 10px;
+  font-size: 12px;
 	text-align: right;
 	margin: 20px;
+	float: bottom;
 }
 	
 
