--- a/new.html
+++ b/new.html
@@ -64,7 +64,7 @@ font-family: Arial, Helvetica, sans-serif;
 <div class="content">
  <h1>Emergency questions</h1>
 
-<p><i id = "quotes"></i> </p><br/>
+<p><i id = "quotes"></i> </p>
 	<button class="button button1" onclick="newQuote()">Next question</button> </p>
 	  
 
