--- a/new.html
+++ b/new.html
@@ -17,6 +17,8 @@ border-style: solid;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 16px;
 		margin: 20px;
+		border-style: solid;
+	border-radius: 10px;
 }
 
 
@@ -25,6 +27,8 @@ h1 {
   font-size: 26px;	
   padding: 20px 0px 30px 0px;
 	margin: 20px;
+	border-style: solid;
+	border-radius: 10px;
 }
 	
 h3 {
@@ -33,6 +37,8 @@ font-family: Arial, Helvetica, sans-serif;
 	text-align: right;
 	margin: 20px;
 	float: bottom;
+	border-style: solid;
+	border-radius: 10px;
 }
 	
 
