--- a/new.html
+++ b/new.html
@@ -35,10 +35,10 @@ h3 {
 font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
 	text-align: right;
-	margin: 20px;
+	margin: 80px 20px 20px 20px;
 	float: bottom;
 	border-style: solid;
-	border-radius: 10px;
+	border-radius: 1px;
 }
 	
 
