--- a/new.html
+++ b/new.html
@@ -51,7 +51,7 @@ font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
   display: block;
   font-size: 16px;
-  margin: 30px 0px 0px 0px;
+  margin: 30px;
 }
 
 .button1 {border-radius: 6px; display: block;}
