--- a/new.html
+++ b/new.html
@@ -44,14 +44,13 @@ font-family: Arial, Helvetica, sans-serif;
 
 .button {
   background-color: #aaaaaa; 
-  border-style: solid;
   color: white;
   padding: 35px 32px;
   text-align: center;
   text-decoration: none;
   display: block;
   font-size: 16px;
-  margin: 30px;
+  margin: 30px 0px 0px 30px;
 }
 
 .button1 {border-radius: 6px; display: block;}
