--- a/new.html
+++ b/new.html
@@ -70,7 +70,7 @@ font-family: Arial, Helvetica, sans-serif;
  <h1>Emergency questions</h1>
 
 <p><i id = "quotes"></i> </p>
-	<button class="button button1" onclick="newQuote()">Next question</button> </p>
+	<button class="button button1" onclick="newQuote()">Next question</button> 
 	  
 
 	  
