--- a/new.html
+++ b/new.html
@@ -33,13 +33,11 @@ font-family: Arial, Helvetica, sans-serif;
 	text-align: right;
 	margin: 120px 20px 20px 20px;
 	float: bottom;
-	border-style: solid;
-	border-radius: 1px;
 }
 	
 
 .button {
-  background-color: #aaaaaa; 
+  background-color: #ffff00; 
   color: white;
   padding: 35px 32px;
   text-align: center;
