--- a/new.html
+++ b/new.html
@@ -31,13 +31,13 @@ h3 {
 font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
 	text-align: right;
-	margin: 120px 20px 20px 20px;
+	margin: 150px 20px 20px 20px;
 	float: bottom;
 }
 	
 
 .button {
-  background-color: #ffff00; 
+  background-color: #0000ff; 
   color: white;
   padding: 35px 32px;
   text-align: center;
