--- a/new.html
+++ b/new.html
@@ -29,6 +29,7 @@ h1 {
 	
 #copy {
 font-family: Arial, Helvetica, sans-serif;
+	max-width: 500px;
   font-size: 10px;
 	text-align: right;
 	margin: 150px 20px 20px 20px;
