--- a/new.html
+++ b/new.html
@@ -30,9 +30,9 @@ h1 {
 #copy {
 font-family: Arial, Helvetica, sans-serif;
 	max-width: 500px;
+	margin: 200px auto;
   font-size: 10px;
 	text-align: right;
-	margin: 150px 20px 20px 20px;
 	float: bottom;
 }
 	
