--- a/new.html
+++ b/new.html
@@ -6,10 +6,10 @@
 <style>
 .content {
   max-width: 500px;
-  margin: 200px auto;
+  margin: 100px auto;
 background-color: #87CEEB;
 	height: 300px;
-border-style: solid;
+border-style: dotted;
 	border-radius: 10px;
 }
 
