--- a/new.html
+++ b/new.html
@@ -9,7 +9,7 @@
   margin: 100px auto;
 background-color: #87CEEB;
 	height: 300px;
-border-style: 1px dashed;
+border-style: dashed;
 	border-radius: 10px;
 }
 
