--- a/new.html
+++ b/new.html
@@ -6,7 +6,7 @@
 <style>
 .content {
   max-width: 500px;
-  margin: 100px auto;
+  margin: 100px auto 50px auto;
 background-color: #87CEEB;
 	height: 300px;
 border-style: dashed;
