--- a/new.html
+++ b/new.html
@@ -47,6 +47,9 @@ font-family: Arial, Helvetica, sans-serif;
   display: block;
   font-size: 16px;
   margin: 30px 0px 0px 30px;
+	border-style: dashed;
+	border-width: 1px;
+	border-radius: 10px;
 }
 
 .button1 {border-radius: 6px; display: block;}
