--- a/new.html
+++ b/new.html
@@ -55,7 +55,7 @@ font-family: Arial, Helvetica, sans-serif;
 .button1 {border-radius: 6px; display: block;}
 	
 
-
+#quotes {margin: 0px; padding-bottom: 20px; display: block;}
 
 </style>
 
