--- a/index.html
+++ b/index.html
@@ -237,18 +237,12 @@
             
             <!-- === Generator View (The only view) === -->
             <div id="generator-view">
-                <!-- LOGO AND TITLE HEADER -->
-                <header class="mb-6 relative">
-                    <div class="text-center">
-                        <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight">Emergency Questions</h1>
-                        <p class="text-gray-300 mt-2 text-sm sm:text-base">Break the ice. Spark a conversation.</p>
-                    </div>
-                    <!-- Image positioned absolutely on the right of the header -->
-                    <img src="http://googleusercontent.com/generated_image_content/0" 
-                         alt="App Logo featuring a dog" 
-                         class="absolute top-0 right-0 w-12 h-12 rounded-full shadow-lg border-2 border-yellow-400 object-cover">
+                <!-- TITLE HEADER -->
+                <header class="mb-6 text-center">
+                    <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight">Emergency Questions</h1>
+                    <p class="text-gray-300 mt-2 text-sm sm:text-base">Break the ice. Spark a conversation.</p>
                 </header>
-                <!-- END LOGO AND TITLE HEADER -->
+                <!-- END TITLE HEADER -->
                 
                 <p id="loading-status" class="text-center text-sm text-yellow-500 mb-4">Loading static data...</p>
 
