--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             'Hypothetical Scenarios': [
                 "You have the power to eradicate one common annoyance forever. Which one do you choose?",
                 "You must exchange your body with one fictional character for a week. Who is it?",
+                "Would you rather co-own a car with Jimmy Carr, a lorry with Hugh Laurie, or a van with Van Morrison?",
             ],
             'Trivial & Fun': [
                 "What's the strangest food combination you secretly enjoy?",
