--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             ],
             'Hypothetical Scenarios': [
                 "You have the power to eradicate one common annoyance forever. Which one do you choose?",
-                "You must exchange your body with one fictional character for a week. Who is it?",
+                "Would you rather be a mime or one of those people who pretends to be a statue?",
                 "Would you rather co-own a car with Jimmy Carr, a lorry with Hugh Laurie, or a van with Van Morrison?",
             ],
             'Trivial & Fun': [
