--- a/index.html
+++ b/index.html
@@ -58,18 +58,23 @@
         const DEFAULT_QUESTION_DATA = {
             'Deep Thoughts': [
                 "If you could have dinner with one historical figure, who would it be and why?",
-                "What is the most beautiful thing you have ever seen in person?",
+                "What’s your favorite thing you own, and why?",
                 "If your life had a theme song, what would it be and why?",
             ],
             'Hypothetical Scenarios': [
                 "You have the power to eradicate one common annoyance forever. Which one do you choose?",
                 "Would you rather be a mime or one of those people who pretends to be a statue?",
                 "Would you rather co-own a car with Jimmy Carr, a lorry with Hugh Laurie, or a van with Van Morrison?",
+                "What’s your survival plan during a zombie apocalypse?",
             ],
             'Trivial & Fun': [
                 "What's the strangest food combination you secretly enjoy?",
                 "What is your go-to karaoke song (even if you've never sung it publicly)?",
-                "Which is your favourite relative or sibling?"
+                "Which is your favourite relative or sibling?",
+                "What's your favourite collective noun?",
+                "What bin do you need to put out this week?",
+                "Who is the best super villain of all time?",
+                
             ]
         };
         
