--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 "Would you rather be a mime or one of those people who pretends to be a statue?",
                 "Would you rather co-own a car with Jimmy Carr, a lorry with Hugh Laurie, or a van with Van Morrison?",
                 "What’s your survival plan during a zombie apocalypse?",
+                "If you had to create an alter ego for yourself, who would it be and what would you name them?",
             ],
             'Trivial & Fun': [
                 "What's the strangest food combination you secretly enjoy?",
