--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                 "Would you rather co-own a car with Jimmy Carr, a lorry with Hugh Laurie, or a van with Van Morrison?",
                 "What’s your survival plan during a zombie apocalypse?",
                 "If you had to create an alter ego for yourself, who would it be and what would you name them?",
+                "If a song played every time you entered a room, what would it be?",
+                "If you had the planet to yourself, where would you live?",
+                "Which celebrity will play you in the film about your life?",
             ],
             'Trivial & Fun': [
                 "What's the strangest food combination you secretly enjoy?",
@@ -75,6 +78,8 @@
                 "What's your favourite collective noun?",
                 "What bin do you need to put out this week?",
                 "Who is the best super villain of all time?",
+                "What's your favourite collective noun?",
+                "Who's your favourite Alan?",
                 
             ]
         };
