--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 "If you could have dinner with one historical figure, who would it be and why?",
                 "What’s your favorite thing you own, and why?",
                 "If your life had a theme song, what would it be and why?",
+                "What one photo would you send out to aliens?",
+                "Can money buy you happiness?",
+                "If you could only eat one thing for the rest of your life what would it be?",
             ],
             'Hypothetical Scenarios': [
                 "You have the power to eradicate one common annoyance forever. Which one do you choose?",
@@ -70,6 +73,8 @@
                 "If a song played every time you entered a room, what would it be?",
                 "If you had the planet to yourself, where would you live?",
                 "Which celebrity will play you in the film about your life?",
+                "If you could have a fifth season, what would it be, and when would you have it?",
+                "Which country would you like to be the ruler of?",
             ],
             'Trivial & Fun': [
                 "What's the strangest food combination you secretly enjoy?",
@@ -80,6 +85,15 @@
                 "Who is the best super villain of all time?",
                 "What's your favourite collective noun?",
                 "Who's your favourite Alan?",
+                "What song would you like to replace our national anthem with?",
+                "What is your favourite anagram?",
+                "Have you ever had anything removed from your body?",
+                "How do you feel about marmite?",
+                "Have you ever pretended to be your own twin?",
+                "What would your wrestling name be?",
+                "What's your favourite long red thing?",
+                "What film or story would you like to see remade by the muppets?",
+                
                 
             ]
         };
