--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 "What one photo would you send out to aliens?",
                 "Can money buy you happiness?",
                 "If you could only eat one thing for the rest of your life what would it be?",
+                "What's the most annoying place you've ever been to?",
             ],
             'Hypothetical Scenarios': [
                 "You have the power to eradicate one common annoyance forever. Which one do you choose?",
@@ -75,6 +76,8 @@
                 "Which celebrity will play you in the film about your life?",
                 "If you could have a fifth season, what would it be, and when would you have it?",
                 "Which country would you like to be the ruler of?",
+                "Would you rather have wooden teeth, or a wooden leg?",
+                "What would you like your pet to sound like if it could talk?",
             ],
             'Trivial & Fun': [
                 "What's the strangest food combination you secretly enjoy?",
@@ -93,6 +96,11 @@
                 "What would your wrestling name be?",
                 "What's your favourite long red thing?",
                 "What film or story would you like to see remade by the muppets?",
+                "What do you think the tooth fairy is doing with all those teeth?",
+                "What's your favourite round thing?",
+                "How do you decide when it's time to retire a pair of pants?",
+                "What does Father Christmas need to do to modernize?",
+                "What would be the funniest thing to fill a pi&ntilde;ata with?
                 
                 
             ]
