--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                 "Which country would you like to be the ruler of?",
                 "Would you rather have wooden teeth, or a wooden leg?",
                 "What would you like your pet to sound like if it could talk?",
+                "If you could jump into a pool of something, what would it be?",
+                "If you could be part Grufallo, would you have claws, fangs, horns, or spikes?",
+                "What's the worst present you've ever recieved?",
+                
             ],
             'Trivial & Fun': [
                 "What's the strangest food combination you secretly enjoy?",
