--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 "What's the largest animal you think you can beat in a fight?",
                 "Who would you most like to punch in the face?",
                 "Have you got an imaginary friend?",
-                "Why do you think the word gullible isn\'t in the dictionary?",
+                "Why do you think the word gullible isn't in the dictionary?",
                 "Would you consider having sex with an alien?",
                 "Why is drowsiness listed as a side effect for sleeping pills?",
                 "What should we call a female Daddy Long Legs?",
