--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 "What are you going to leave me in your will? Take into consideration that this will affect how I treat you for the rest of your life!",
                 "Why do you think Donkey Kong is a monkey and not a donkey?",
                 "Where does prune juice come from if prunes are dried plums?",
-                "If we can turn peanuts into butter what other thing would you like to be turned into butter?"
+                "If we can turn peanuts into butter what other thing would you like to be turned into butter?",
                 "What would be the worst Buy One Get One Free sale of all time?",
                 "What's the last dream you can remember?",
                 "What are you scared of?",
