--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                 "Is honesty the best policy?",
                 "What will you win a Nobel Prize for?",
                 "What word or phrase do you hate more than any other?",
+                "Would you rather know what happened before the universe existed or what happens after it ends?"
+                "What’s the most historic thing that has happened in your lifetime?",
+                "If you could swap a TV series that went on for too long for one that was cancelled too soon, which would you choose?",
             
             ],
             'Hypothetical Scenarios': [
@@ -108,6 +111,10 @@
                 "If you could merge two different animals to create a third animal, what would you choose, and what would its major characteristics be?",
                 "Which fictional character would be the most annoying in real life?",
                 "Which two public figures would you like to see fight each other, and which one would win?",
+                "If you could hypnotise someone, who would it be, and what would you make them do?",
+                "If magic was real, what spell would you try to learn first?",
+                "If you built a themed hotel, what would the theme be and what would the rooms look like?",
+                "If you had to disappear and start a whole new life, what would you want your new life to look like?",
                 
             ],
             'Trivial & Fun': [
@@ -155,6 +162,19 @@
                 "What sport would be the funniest to add a mandatory amount of alcohol to?",
                 "What would be the hat to end all hats? What could you wear on your head that would make people stop what they are doing and stare in awe and amazement?",
                 "What would be the coolest animal to scale up to the size of a horse?",
+                "What's your favourite smell?",
+                "Have you got a favourite Venn diagram?",
+                "Who's your least favourite celebrity or politician?",
+                "What obstacles would be included in the World’s most amazing obstacle course?",
+                "What’s the most ridiculous thing you have bought?",
+                "If you could see 3 stats about any person you looked at, what three stats would you want to know?",
+                "What movie's plot changes entirely only by changing one letter in the title?",
+                "If you had a giraffe that you needed to hide, where would you hide it?",
+                "What's the best thing you've ever found?",
+                "What's the best free thing that you get?",
+                "Which non-potato crisp is the best?",
+                "Who is the first person you remember fancying?",
+                "Which Quality Street chocolate would you abolish, and what would you replace it with?",
 
             ]
         };
