--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 "Would you rather know what happened before the universe existed or what happens after it ends?"
                 "What’s the most historic thing that has happened in your lifetime?",
                 "If you could swap a TV series that went on for too long for one that was cancelled too soon, which would you choose?",
+                "What 3 words best describe you?",
             
             ],
             'Hypothetical Scenarios': [
@@ -175,6 +176,8 @@
                 "Which non-potato crisp is the best?",
                 "Who is the first person you remember fancying?",
                 "Which Quality Street chocolate would you abolish, and what would you replace it with?",
+                "What's your favourite film or book quote?",
+                "What would peanut butter be called if it wasn't called peanut butter?",
 
             ]
         };
